--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -1,3 +1,15 @@
+<!-- READ ME -->
+<!-- Don't learn how CSS Grid works from this code because i'm not sure if i'm doing it 
+    properly.
+
+    I'll probably come back and rewrite some of this stuff.
+
+    Instead it may be worth watching this youtube vid to learn CSS Grid:
+    https://www.youtube.com/watch?v=9zBsdzdE4sM
+
+-->
+
+
 <br>
 <h1 class="heading">Dashboard</h1>
 <br>
@@ -7,7 +19,7 @@
     <!-- Column 1-->
     <div id="profile">
         <img src="assets/icon_profile.png" alt="Profile picture" width="175" height="175">
-        
+
         <!-- TODO: NEED TO SWAP THESE WITH ACTUAL DATABASE VARIABLES -->
         <h2 class="username">John Doe</h2>
         <p class="ranking">Ranking: 3rd</p>
