--- a/views/layouts/main2.hbs
+++ b/views/layouts/main2.hbs
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Document</title>
+    <title>Diabetes@Home</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
                 </li>
             </ul>
         </nav>
-        <a class="login-button" href="#"><button class="flexbox-navbar-button">Log in</button></a>
+        <a href="patient_dash"><button class="flexbox-navbar-button">Log in</button></a>
 
     </header>
 
