--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -28,7 +28,7 @@
     <!-- Column 2 -->
     <!-- Grid container that stores buttons-->
     <div id="patient-dashboard-grid-container-nested">
-        <button class="button01">Record Health</button>
+        <a href="test" class="button01">Record Health</a>
         <button class="button01 purple1">View History</button>
         <button class="button01 purple2">Leaderboard</button>
         <button class="button01 purple3">Settings</button>
