--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -176,6 +176,22 @@ header {
 .flexbox-main-content-lists li a {
     color: dodgerblue;
 }
+.flexbox-patient-overview-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: auto;
+}
+.flexbox-patients-item {
+    height: 150px;
+    width: 90%;
+    border-radius: 20px;
+    margin-bottom: 50px;
+    border: 3px solid black;
+    background-color: gray;
+    
+}
+
 
 /* Container that stores the YouTube videos */
 .video-container {
