hard coded patient and clinician identities to their respective dashboards

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -31,10 +31,11 @@
         <nav>
             <ul class="flexbox-navbar-profile">
                 <li class="nav-username">
-                    <p>Username</p>
+                    <p>{{userName}}</p>
                 </li>
                 <li class="nav-userstatus">
-                    <p>USER</p>
+                    <p>{{userRole}}</p>
+                    {{!-- <p>USER</p> --}}
                 </li>
             </ul>
         </nav>
