--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -22,9 +22,11 @@
         <img src="../assets/icon_profile.png" alt="Profile picture" width="175" height="175">
 
         <!-- TODO: NEED TO SWAP THESE WITH ACTUAL DATABASE VARIABLES -->
-        {{#with patientData}}
+        {{!-- {{#with patientData}}
         <h2 class="username">{{this.firstName}} {{this.lastName}}</h2>
-        {{/with}} 
+        {{/with}}  --}}
+
+        <h2 class="username">Pat</h2>
         <p class="ranking">Ranking: 3rd</p>
     </div>
 
