Converted record_health from html to hbs but missing some css files, wired record_health.hbs to database

--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -34,7 +34,7 @@
     <!-- Column 2 -->
     <!-- Grid container that stores buttons-->
     <div id="patient-dashboard-grid-container-nested">
-        <a href="test" class="button01">Record Health</a>
+        <a href="record_health" class="button01">Record Health</a>
         <button class="button01 purple1">View History</button>
         <button class="button01 purple2">Leaderboard</button>
         <button class="button01 purple3">Settings</button>
