--- a/views/test_data.hbs
+++ b/views/test_data.hbs
@@ -6,19 +6,9 @@
     <h2 style="color:teal;">Changelog:</h2>
     <h2 style="color:teal;">15/04 Display data from Atlas, don't know how to post yet</h2>
     <h2 style="color:teal;">17/04 Can now post to database via form</h2>
+    <h2 style="color:teal;">20/04 Can now post to database from record_health.hbs according to selected measurement type</h2>
     <br>
     <h2>Test submission portal for blood glucose</h2>
-    <form class="container" method="POST" action="/post_values">
-        <label for="measured_value">Blood Glucose:</label>
-        <br>
-        <input id="measured_value" name="measured_value">
-        <br>
-        <label for="comment">Comment:</label>
-        <br>
-        <textarea id="comment" name="comment"></textarea>
-        <br>
-        <button>Submit</button>
-    </form>
     
     <br>
     <h2>Blood glucose log from server: </h2>
